# rust_tinyget

./: .gitignore  CHANGELOG.md  COPYING-minreq  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: http.rs  http_timeout.rs  https.rs  https_timeout.rs  iterator.rs
src/: connection.rs  error.rs  lib.rs  request.rs  response.rs
src/native_tls/: openssl.rs
tests/: main.rs  query.rs  setup.rs
tests/common/: mod.rs
